feat: add new database module for tracking transactions

--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <module>market</module>
         <module>router</module>
         <module>broker</module>
+        <module>transaction-db</module>
     </modules>
 
     <properties>
